--- a/src/Components/AddForm/addForm.css
+++ b/src/Components/AddForm/addForm.css
@@ -1,3 +1,9 @@
-.add-form {
+.bottom-panel {
   margin-top: 10px;
+}
+
+.bottom-panel .new-todo-text {
+  width: auto;
+  flex-grow: 1;
+  margin-right: 3px;
 }
