--- a/src/Components/SearchField/searchField.css
+++ b/src/Components/SearchField/searchField.css
@@ -1,4 +1,8 @@
-.search-input {
+.search-field {
+  margin: 1rem 0;
+}
+
+.search-field .search-input {
   width: auto;
   flex-grow: 1;
   margin-right: 3px;
